reformatted main twee

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "twee3LanguageTools.storyformat.current": "sugarcube-2",
     "twee3LanguageTools.passage.list": true,
-    "twee3LanguageTools.passage.group": "Tag"
+    "twee3LanguageTools.passage.group": "Tag",
+    "editor.foldingStrategy": "indentation",
+    "editor.showFoldingControls": "always"
 }
